# plasma-workspace

appmenu/: appmenu.cpp  appmenu.h  appmenu_dbus.cpp  appmenu_dbus.h  kdbusimporter.h  menuimporter.cpp  menuimporter.h  verticalmenu.cpp  verticalmenu.h
freespacenotifier/: freespacenotifier.cpp  freespacenotifier.h  module.cpp  module.h
gmenu-dbusmenu-proxy/: actions.cpp  actions.h  gdbusmenutypes_p.cpp  gdbusmenutypes_p.h  icons.cpp  icons.h  main.cpp  menu.cpp  menu.h  menuproxy.cpp  menuproxy.h  utils.cpp  utils.h  window.cpp  window.h
kcms/formats/: CMakeLists.txt  formatssettings.kcfg  kcmformats.cpp  kcmformats.h  localelistmodel.cpp  localelistmodel.h
kcms/formats/package/contents/ui/: FormatComboBox.qml  main.qml
klipper/: actionstreewidget.cpp  actionstreewidget.h  clipboardengine.cpp  clipboardengine.h  clipboardjob.cpp  clipboardjob.h  clipboardservice.cpp  clipboardservice.h  configdialog.cpp  configdialog.h  editactiondialog.cpp  editactiondialog.h  history.cpp  history.h  historyimageitem.cpp  historyimageitem.h  historyitem.cpp  historyitem.h  historymodel.cpp  historymodel.h  historystringitem.cpp  historystringitem.h  historyurlitem.cpp  historyurlitem.h  klipper.cpp  klipper.h  klipperpopup.cpp  klipperpopup.h  main.cpp  popupproxy.cpp  popupproxy.h  tray.cpp  tray.h  urlgrabber.cpp  urlgrabber.h
krunner/: main.cpp  view.cpp  view.h
ksmserver/: CMakeLists.txt  client.cpp  client.h  global.h  legacy.cpp  logout.cpp  main.cpp  server.cpp  server.h
ktimezoned/: ktimezoned.cpp  ktimezoned.h  ktimezoned_win.cpp  ktimezoned_win.h  (+1 more)
shell/: osd.h  (+30 more)
(+882 files in other folders)
